Decor: add edible tag, fixes